<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="ca.csf.mobile1.tp2.activity.MainActivity" tools:layout_editor_absoluteY="81dp"
        tools:layout_editor_absoluteX="0dp"
>

    <EditText
            android:id="@+id/inputEditText"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:hint="@string/preview_EditText"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" android:layout_marginLeft="8dp" app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp" app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
    />

    <Button
            android:id="@+id/encryptButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_encrypt_button"
            android:drawableLeft="@drawable/encrypt"
            android:background="@android:color/transparent"
            android:drawablePadding="10dp"
            android:layout_marginTop="22dp"
            android:onClick="onEncryptButtonClick"
            app:layout_constraintTop_toBottomOf="@+id/inputEditText" android:layout_marginLeft="80dp"
            app:layout_constraintLeft_toLeftOf="parent" android:layout_marginStart="50dp"
    />

    <Button
            android:id="@+id/decryptButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_decrypt_button"
            android:drawableLeft="@drawable/encrypt"
            android:drawablePadding="10dp"
            android:background="@android:color/transparent"
            android:layout_marginTop="22dp"
            android:onClick="onDecryptButtonClick"
            app:layout_constraintTop_toBottomOf="@+id/inputEditText" android:layout_marginRight="80dp"
            app:layout_constraintRight_toRightOf="parent" android:layout_marginEnd="50dp"
    />

    <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:indeterminate="true"
            android:visibility="invisible"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/encryptButton" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
    />

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:onClick="onFloatingActionButtonClick"
            app:srcCompat="@drawable/key"
            app:fabSize="normal"
            android:layout_marginRight="30dp"
            app:layout_constraintRight_toRightOf="@+id/progressBar" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/decryptButton" android:layout_marginEnd="30dp"
    />

    <TextView
            android:id="@+id/outputTextView"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:text="@string/text_result"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent" android:layout_marginTop="27dp"
            app:layout_constraintTop_toBottomOf="@+id/progressBar" android:layout_marginStart="16dp"
    />

    <TextView
            android:id="@+id/keyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_key"
            android:textStyle="italic"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="24dp" android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent" android:layout_marginStart="16dp"
    />

    <Button
            android:id="@+id/copyButton"
            android:layout_width="22dp"
            android:layout_height="50dp"
            android:drawableLeft="@drawable/copy"
            android:background="@android:color/transparent"
            android:layout_marginRight="16dp"
            android:onClick="onCopyButtonClick"
            app:layout_constraintRight_toRightOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            tools:layout_editor_absoluteY="445dp" tools:layout_editor_absoluteX="346dp"/>

</android.support.constraint.ConstraintLayout>
